infra/k8s/event-bus-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: event-bus-depl
spec:
  replicas: 1
  selector: # Select which pods to manage, act like 'Class selector'
    matchLabels: # Label can be [Dora: emon], not just [app: posts]
      app: event-bus
  template: # Specify pods configuration
    metadata:
      labels:
        app: event-bus # act like a 'Class name' in HTML
    spec:
      containers:
        - name: event-bus
          image: wahaha007/event-bus
--- # Use --- to seperate many Objects in one file
apiVersion: v1
kind: Service
metadata:
  name: event-bus-srv
spec:
  # type: ClusterIP # In not specified, default is ClusterIP
  selector:
    app: event-bus
  ports:
    - name: event-bus
      protocol: TCP
      port: 4005 #
      targetPort: 4005 #
